Seperated Shader Program into its class, working

--- a/shader-editor.vcxproj
+++ b/shader-editor.vcxproj
@@ -25,6 +25,10 @@
   <ItemGroup>
     <ClInclude Include="src\OpenGLShaderProgram.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="shaders\basic.frag" />
+    <None Include="shaders\basic.vert" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
