--- a/shader-editor.vcxproj
+++ b/shader-editor.vcxproj
@@ -21,11 +21,13 @@
   <ItemGroup>
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\Mesh.cpp" />
     <ClCompile Include="src\OpenGLShaderProgram.cpp" />
     <ClCompile Include="src\Texture2D.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Camera.h" />
+    <ClInclude Include="src\Mesh.h" />
     <ClInclude Include="src\OpenGLShaderProgram.h" />
     <ClInclude Include="src\Texture2D.h" />
   </ItemGroup>
